NLP TP's/texts/robotics/robotics.stackexchange_0000065004.txt
Q:

opencv compilation error

In file included from /usr/include/GL/gl.h:2059:0,
                 from /usr/include/GL/glx.h:32,
                 from /home/odroid/opencv-3.0/modules/highgui/src/window_QT.cpp:59:
/usr/include/GL/glext.h:468:19: error: conflicting declaration ‘typedef std::ptrdiff_t GLsizeiptr’
 typedef ptrdiff_t GLsizeiptr;
                   ^
In file included from /usr/include/qt4/QtOpenGL/qgl.h:79:0,
                 from /usr/include/qt4/QtOpenGL/QtOpenGL:5,
                 from /home/odroid/opencv-3.0/modules/highgui/src/window_QT.h:46,
                 from /home/odroid/opencv-3.0/modules/highgui/src/window_QT.cpp:47:
/usr/include/GLES2/gl2.h:69:25: error: ‘GLsizeiptr’ has a previous declaration as ‘typedef khronos_ssize_t GLsizeiptr’
 typedef khronos_ssize_t GLsizeiptr;
                         ^
In file included from /usr/include/GL/gl.h:2059:0,
                 from /usr/include/GL/glx.h:32,
                 from /home/odroid/opencv-3.0/modules/highgui/src/window_QT.cpp:59:
/usr/include/GL/glext.h:469:19: error: conflicting declaration ‘typedef std::ptrdiff_t GLintptr’
 typedef ptrdiff_t GLintptr;
                   ^
In file included from /usr/include/qt4/QtOpenGL/qgl.h:79:0,
                 from /usr/include/qt4/QtOpenGL/QtOpenGL:5,
                 from /home/odroid/opencv-3.0/modules/highgui/src/window_QT.h:46,
                 from /home/odroid/opencv-3.0/modules/highgui/src/window_QT.cpp:47:
/usr/include/GLES2/gl2.h:70:26: error: ‘GLintptr’ has a previous declaration as ‘typedef khronos_intptr_t GLintptr’
 typedef khronos_intptr_t GLintptr;
                          ^
make[2]: *** [modules/highgui/CMakeFiles/opencv_highgui.dir/src/window_QT.cpp.o] Error 1
make[1]: *** [modules/highgui/CMakeFiles/opencv_highgui.dir/all] Error 2
make: *** [all] Error 2

Originally posted by saamishon on ROS Answers with karma: 1 on 2015-01-07
Post score: 0

A:

You don't provide any information about what you're doing or why, so I'm going to make a few guesses.
It looks like you're trying to compile OpenCV3 on an odroid.
It's failing because the version of QT4 that's packaged with Ubuntu is compiled against OpenGL ES, and something in OpenCV is trying to use OpenGL directly; resulting in the OpenGL and OpenGL ES headers being included at the same time during compilation.
This isn't really related to ROS. You'll probably get a better answer if you ask on the OpenCV site: http://answers.opencv.org/questions/

Originally posted by ahendrix with karma: 47576 on 2015-01-08
This answer was ACCEPTED on the original site
Post score: 0

